error fix and input field spacing added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,185 @@
 /* Project01 CSS File */
+
+body {
+    font-family: "Arial", sans-serif;
+    background-image: url("../images/CaffeineBackground.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#container {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.heading,
+.headingText {
+    color: #fff;
+    text-align: center;
+}
+
+.heading {
+    margin-top: 380px;
+    font-family: 'Special Elite', cursive;
+    font-size: 50px;
+}
+
+.headingText {
+    color: #3e170c;
+    font-weight: bold;
+}
+
+.search {
+    margin-top: 80px;
+}
+
+input {
+    width: 50%;
+}
+
+.location {
+    display: inline;
+}
+
+.formLabel {
+    font-size: 24px;
+    font-weight: bold;
+    color: #3e170c;
+}
+
+.radius {
+    font-size: 24px;
+    font-weight: bold;
+    color: #3e170c;
+}
+
+button {
+    font-size: 24px;
+    font-weight: bold;
+    color: #3e170c;
+    border-radius: 8px;
+    border: 1px solid #3e170c;
+    background-color: #fff;
+}
+
+button:hover {
+    background-color: #3e170c;
+    color: #fff;
+}
+
+select {
+    font-family: inherit;
+    color: inherit;
+}
+
+.results {
+    border: 1px solid #fff;
+    height: 300px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+    box-sizing: border-box;
+    background-color: #fff;
+    float: left;
+    width: 100%;
+}
+
+.map {
+    border: 1px solid #fff;
+    height: 300px;
+    box-sizing: border-box;
+    margin-top: 350px;
+    height: 500px;
+    margin-bottom: 75px;
+    max-width: 960px;
+    margin-left: 2px;
+}
+
+table {
+    margin: 0 auto;
+    background-color: #fff;
+    color: #3e170c;
+}
+
+td,
+th {
+    width: 320px;
+    text-align: center;
+}
+
+hr {
+    border: 1px solid #3e170c;
+}
+
+footer {
+    text-align: center;
+    font-size: 14px;
+    color: #3e170c;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+
+/*Media Query - Tablets*/
+
+@media only screen and (max-width: 768px) {
+    #container {
+        height: 1050px;
+    }
+
+    .heading {
+        margin-top: 250px;
+    }
+
+    .search {
+        margin-top: 30px;
+        margin-bottom: 25px;
+        text-align: center;
+    }
+
+    input {
+        width: 20%;
+    }
+    .results {
+        width: 80%;
+        margin-left: 75px;
+        margin-top: 20px;
+    }
+
+    .map {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 250px;
+    }
+    .formLabel {
+        font-size: 20px;
+    }
+
+    .radius {
+        font-size: 20px;
+    }
+    button {
+        font-size: 20px;
+    }
+}
+
+
+/*Media Query - Phones*/
+
+@media only screen and (max-width: 576px) {
+    #container {
+        height: 1050px;
+    }
+
+    .headingText {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+
+    .search {
+        text-align: center;
+    }
+
+    .results {
+        margin-left: 60px;
+    }
+}
